<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="hello">Hello World, tpds!</string>
    <string name="app_name">Trusted Package Delivery System</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Register a New Account</string>
    <string name="login">Login</string>
    <string name="login_instructions">You must log in to continue.</string>
    <string name="login_invalid">Username or password incorrect.</string>
    <string name="login_progress">Logging in, please wait...</string>
    <string name="login_remember">Remember me.</string>
    <string name="realname">Real Name</string>
    <string name="password_confirm">Confirm Password</string>
    <string name="register_login">Register and Login</string>
    <string name="register_nomatch">Your passwords do not match.</string>
    <string name="register_error_generic">Unable to register user. Please try a different username and password combination.</string>
    <string name="register_tooshort">Password not long enough (minimum 6 characters).</string>
    <string name="login_existing">Login with Existing Account</string>
    <string name="register_app">Register</string>
    <string name="login_app">Login</string>
    <string name="prefs_filename">TPDSPreferences</string>
    <string name="friends_app">Friends</string>
    <string name="package_app">Package</string>
    <string name="send_app">Send</string>
    <string name="greeting">Welcome to TPDS, </string>
    <string name="logout">Logout</string>
    <string name="settings_app">Settings</string>
    <string name="currtoken">Current Token</string>
    <string name="menu_app">Menu</string>
    <string name="friends_empty"></string>
    <string name="waiting_for_data">Retrieving data...</string>
    <string name="report_user">Remove and Report User</string>
    <string name="friends_list_app">Friends List</string>
    <string name="friends_edit_app">Edit Friend</string>
    <string name="trusted">Trust with my packages.</string>
    <string name="deliverable">I will deliver to this person.</string>
    <string name="save">Save</string>
    <string name="close">Close</string>
    <string name="back">Back</string>
    <string name="save_close">Save and Close</string>
    <string name="remove_prompt">Remove %s from your friends list?</string>
    <string name="remove_only">Remove from my friends list only.</string>
    <string name="remove_report">Remove from my friends list and report malicious activity.</string>
    <string name="user_not_found">User not found.</string>
    <string name="gps_daemon">TPDS GPS Daemon</string>
    <string name="location_app">Location Logger</string>
    <string name="last_location">Last Location</string>
    <string name="login_remember_long">Remember my login information.</string>
    <string name="token">Token</string>
    <string name="recipient">Recipient</string>
    <string name="use_trusted">Only allow people I trust to handle this package.</string>
    <string name="send_package">Send Package</string>
    <string name="pid">Package Identification Number</string>
    <string name="get_package">Track Package</string>
    <string name="package_not_found">Package Not Found</string>
    <string name="to">To:</string>
    <string name="from">From:</string>
    <string name="track">Track</string>
    <string name="send">Send</string>
    <string name="package_track_app">Package Tracking Dialog</string>
    <string name="package_send_app">Package Send Dialog</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="last_time">Checked In</string>
    <string name="handoff">Hand Off Package</string>
    <string name="pkg">PID:</string>
    <string name="status">Status:</string>
    <string name="pkgs_empty">There are no packages sent by you, en route to you, or in your possesion.</string>
    <string name="package_saved_app">Saved Packages</string>
    <string name="register_username_illegal_chars">Username must be alphanumeric.</string>
    <string name="register_realname_illegal_chars">Real name cannot contain symbols except &quot; &quot; (space) and &quot;-&quot; (dash).</string>
    <string name="error_no_internet_connection">It appears your Android device is not connected to the internet. Please reconnect and restart TPDS.</string>
    <string name="error_no_internet_connection_title">Internet Connection Required</string>
    <string name="id">ID</string>
</resources>
