<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:id="@+id/layout_register"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:stretchColumns="1"
    android:padding="10dp">
        
    <TableRow>
    	<TextView android:id="@+id/textViewRealname"
    		android:text="@string/realname" 
    		android:layout_width="wrap_content" 
    		android:layout_height="20dp"
    		android:layout_span="2" />
    </TableRow>
    
    <TableRow>
        <EditText android:id="@+id/editTextRealname"
        	android:text=""  
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content"
        	android:layout_span="2" 
        	android:autoText="false"/>
    </TableRow>
    
    <TableRow>
    	<TextView android:id="@+id/textViewUsername"
    		android:text="@string/username" 
    		android:layout_width="wrap_content" 
    		android:layout_height="20dp"
    		android:layout_span="2" />
    </TableRow>
    
    <TableRow>
        <EditText android:id="@+id/editTextUsername"
        	android:text=""  
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content"
        	android:layout_span="2" 
        	android:autoText="false"/>
    </TableRow>
    
    <TableRow>
    	<TextView android:id="@+id/textViewPassword"
    		android:text="@string/password" 
    		android:layout_width="wrap_content" 
    		android:layout_height="20dp"
    		android:layout_span="2" />
    </TableRow>
    
    <TableRow>
        <EditText android:id="@+id/editTextPassword"
        	android:text=""
        	android:password = "true"
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content"
        	android:layout_span="2" />
    </TableRow>
    
    <TableRow>
    	<TextView android:id="@+id/textViewPassword2"
    		android:text="@string/password_confirm" 
    		android:layout_width="wrap_content" 
    		android:layout_height="20dp"
    		android:layout_span="2" />
    </TableRow>
    
    <TableRow>
        <EditText android:id="@+id/editTextPassword2"
        	android:text=""
        	android:password = "true"
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content"
        	android:layout_span="2" />
    </TableRow>
    
    <TableRow>
        <CheckBox android:id="@+id/savePassword"
        	android:text="@string/login_remember"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_span="2" />
    </TableRow>

    <TableRow>
        <Button android:id="@+id/buttonRegisterLogin" 
        	android:text="@string/register_login"
        	android:layout_height="wrap_content"
        	android:layout_width="fill_parent" 
        	android:layout_marginTop="10dp"
        	android:layout_span="2" />
    </TableRow>
    
    <View android:layout_height="1dip"
        android:background="#FF909090"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
    
    <TableRow>
    	<Button android:id="@+id/buttonLoginExisting" 
        	android:text="@string/login_existing"
        	android:layout_width="fill_parent" 
        	android:layout_height="wrap_content"
        	android:layout_span="2" />
    </TableRow>
</TableLayout>