<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="wrap_content"
    android:layout_width="wrap_content"
    android:stretchColumns="1"
    android:padding="10dp">
    <TableRow>
    	<TextView android:text="@string/id"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginRight="10dp" />
    	<TextView android:id="@+id/pkgId"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginRight="10dp"
    		android:textStyle="bold" />
    </TableRow>
    <TableRow>
    	<TextView android:text="@string/from"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginRight="10dp" />
    	<TextView android:id="@+id/source"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginRight="10dp"
    		android:textStyle="bold" />
    </TableRow>
    <TableRow>
    	<TextView android:text="@string/to"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginRight="10dp" />
    	<TextView android:id="@+id/destination"
    		android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:layout_marginRight="10dp"
    		android:textStyle="bold" />
    </TableRow>
</TableLayout>