<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:stretchColumns="1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="10dp">
	
	<TableRow>
    	<TextView android:id="@+id/textViewRecipient"
    		android:text="@string/recipient" 
    		android:layout_width="wrap_content" 
    		android:layout_height="20dp"
    		android:layout_span="2" />
    </TableRow>
	
	<TableRow>
		<AutoCompleteTextView android:id="@+id/find_user"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
			android:completionThreshold="1"
			android:layout_span="2"
			android:layout_marginBottom="10dp"
			/>
	</TableRow>
	
	<TableRow>
		<TextView android:id="@+id/textNotFound"
		    	android:text="@string/user_not_found"
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:gravity="center"
		    	android:textSize="14dp"
		    	android:textStyle="bold"
		    	android:textColor="#FFE02E"
		    	android:layout_span="2" />
	</TableRow>
	
	<TableRow>
		<TextView android:id="@+id/textTo"
		    	android:text="@string/to"
		    	android:layout_width="wrap_content" 
		    	android:layout_height="fill_parent"
		    	android:layout_marginRight="4dp"
		    	android:gravity="center_vertical"
		    	android:textSize="20dp"
		    	android:textStyle="bold" />
		
		<LinearLayout android:orientation="vertical"
		    android:layout_height="fill_parent"
		    android:layout_width="wrap_content"
		    android:layout_gravity="left">
			<TextView android:id="@+id/destRealname"
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical"
		    	android:textSize="20dp"
		    	android:textStyle="bold" />
			<TextView android:id="@+id/destUsername"
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical"
		    	android:textSize="16dp" />
		</LinearLayout>
	</TableRow>
	
	<View android:layout_height="1dip"
        android:background="#FF909090"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
        
    <TableRow android:id="@+id/useTrusted"
    	android:visibility="gone">
	    <CheckBox android:id="@+id/useTrustedCheck"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="false" />
	    <TextView android:text="@string/use_trusted"
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_gravity="center_vertical"
			android:width="0dp" />
	</TableRow>
	
    <TableRow android:id="@+id/useTrustedDisabled">
	    <CheckBox android:id="@+id/useTrustedDisabledCheck"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="false"
	        android:clickable="false" />
	    <TextView android:text="@string/use_trusted"
	    	android:textColor="#666666"
	    	android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginLeft="4dp"
			android:layout_gravity="center_vertical"
			android:width="0dp" />
	</TableRow>
	
	<TableRow android:id="@+id/sendEnabled"
		android:visibility="gone">
		<Button android:text="@string/send_package"
	        android:id="@+id/sendButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_marginBottom="10dp"
	        android:layout_span="2" />
	</TableRow>
	
	<TableRow android:id="@+id/sendDisabled">
		<Button android:text="@string/send_package"
	        android:id="@+id/sendDisabledButton"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:clickable="false"
	        android:textColor="#999999"
	        android:layout_span="2" />
	</TableRow>
</TableLayout>