<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:stretchColumns="1"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:padding="10dp">
	
	<TableRow>
		<Button android:text="@string/back"
	        android:id="@+id/back"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="20dp"
	        android:paddingRight="20dp"
	        android:layout_gravity="left" />
	
		<LinearLayout android:orientation="vertical"
		    android:layout_height="wrap_content"
		    android:layout_width="wrap_content"
		    android:paddingLeft="10dp"
		    android:layout_gravity="left">
			<TextView android:id="@+id/realname"
		    	android:text="Ian"
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical"
		    	android:textSize="20dp"
		    	android:textStyle="bold" />
			<TextView android:id="@+id/username"
		    	android:text="Ian"
		    	android:layout_width="wrap_content" 
		    	android:layout_height="wrap_content"
		    	android:gravity="center_vertical"
		    	android:textSize="16dp" />
		</LinearLayout>
		
		<LinearLayout android:orientation="horizontal"
		    android:layout_height="fill_parent"
		    android:layout_width="wrap_content"
		    android:layout_gravity="right">
			<ImageView android:id="@+id/img_trusted"
				android:src="@drawable/trusted"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="10dp"
				android:layout_gravity="center_vertical" />
			<ImageView android:id="@+id/img_deliverable"
				android:src="@drawable/deliverable"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="center_vertical" />
		</LinearLayout>
	</TableRow>
	
	<View android:layout_height="1dip"
        android:background="#FF909090"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
        
	<TableRow>
		<CheckBox android:text="@string/trusted"
	        android:id="@+id/check_trusted"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:layout_span="2" />
	</TableRow>
	
	<TableRow>
		<CheckBox android:text="@string/deliverable"
	        android:id="@+id/check_deliverable"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked="true"
	        android:layout_span="3" />
	</TableRow>
	
	<View android:layout_height="1dip"
        android:background="#FF909090"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp" />
	
	<TableRow>
		<Button android:text="@string/report"
	        android:id="@+id/report"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_marginTop="10dp"
	        android:layout_span="3" />
	</TableRow>
</TableLayout>